<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.passwordmanager.MainActivity">

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:hint="@string/phone_number"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:clickable="false"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generate_otp"
        android:layout_margin="20dp"/>
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_sign_in"
        android:layout_margin="20dp"/>

</LinearLayout>